Fix alignment of group buttons

--- a/src/groups/View.scss
+++ b/src/groups/View.scss
@@ -85,7 +85,7 @@
 	.header-button {
 		min-width: 155px;
 		border-radius: 3px;
-		margin: 0 25px 0 0;
+		margin: 0 0 0 25px;
 		line-height: 20px;
 		padding: 10px;
 		text-align: center;
